# snuffles

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: FindPCAP.cmake  toolchain-linux-aarch64.cmake  toolchain-macos-arm64.cmake  toolchain-windows-x64.cmake
include/: snuffles.h
src/: capture.c  capture.h  capture_raw.c  dissect.c  dissect.h  export_json.c  export_json.h  export_pcap.c  export_pcap.h  filter.c  filter.h  main.c  ringbuf.c  ringbuf.h  session.c  session.h  stats.c  stats.h  syslog_out.c  syslog_out.h  ui.c  ui.h
